# exactly-ai-showcase

./: Dockerfile  README.md
backend/: README.md  main.py  pyproject.toml  pytest.ini
backend/api/: image.py
backend/internal/: consts.py  logging.py  settings.py  worker.py
backend/internal/db/: __init__.py  image.py  models.py
backend/internal/service/: exception.py  image.py  image_classifier.py  utils.py
backend/tests/: conftest.py
backend/tests/api/: test_image.py
backend/tests/internal/service/: test_image.py
frontend/: README.md  package-lock.json  package.json  template.env
frontend/src/: app.html
frontend/src/lib/components/Header/: Header.svelte
frontend/src/lib/components/Picture/: Picture.svelte
frontend/src/lib/components/Spinner/: Spinner.svelte
frontend/src/lib/types/: index.ts
frontend/src/routes/: +page.svelte
