[tool.poetry]
name = "exactly-ai-showcase"
version = "0.1.0"
description = ""
authors = ["KhaninArtur <haninarthur@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.2"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
requests = "^2.31.0"
google-cloud-storage = "^2.16.0"
sqlalchemy = "^2.0.29"
transformers = "^4.40.1"
torch = "^2.3.0"
pillow = "^10.3.0"


[tool.poetry.group.dev.dependencies]
black = {extras = ["d"], version = "^24.4.2"}
pytest = "^8.2.0"
httpx = "^0.27.0"
pytest-asyncio = "^0.23.6"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
